--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -265,10 +265,12 @@ iframe{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #FFFFFF;
 
     border: 1px solid #00AEFF;
     font-family: Bahnschrift, 'Segoe UI', 'Segoe UI Web (West European)', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', sans-serif;
 }
+
 .cancel{
     margin-right: 0.5rem;
     background: #FFFF;
@@ -494,7 +496,7 @@ input:focus{
     justify-content: flex-start;
     border: 1px solid rgb(210, 208, 206);
     border-radius: 6px;
-    background: white;
+    /* background: white; */
   }
 
 
@@ -713,6 +715,8 @@ input:focus{
 
   box-shadow: 0px 0px 11px 0px #00000040;
   border-radius: 6px;
+  
+  
   width: calc(100% - 2rem);
   
   min-height: 3.25rem;
@@ -742,8 +746,8 @@ input:focus{
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #9ee0ff;
-  border-radius: 6px;
+  /* border: 1px solid #9ee0ff;
+  border-radius: 6px; */
   padding: 1rem;
   overflow: auto;
 
@@ -775,6 +779,11 @@ input:focus{
   --slds-c-textarea-shadow-focus : none !important;
 
   padding-bottom: 0.5rem;
+}
+.error-border {
+  border: 1px solid red !important;
+  border-radius: 6px;
+  /* border: 0.0625rem  solid red !important; */
 }
 
 .editName {
