--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -719,7 +719,8 @@ input:focus{
   border-radius: 6px;
   
   
-  width: calc(100% - 2rem);
+  /* width: calc(100% - 2rem); */
+  width: calc(100% - 6rem);
   
   min-height: 3.25rem;
   max-height: 5rem;
