--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.css
@@ -736,7 +736,8 @@ input:focus{
   
   width:100%;
   border-radius: 6px;
-  height: calc(100% - 4rem);
+  /* height: calc(100% - 4rem); */
+  height: calc(100% - 8rem);
  
   padding: 1rem;
   padding-top: 0rem;
@@ -769,12 +770,24 @@ input:focus{
 }
 
 .detailHeader {
-    width: 100%;
+    /* width: 100%; */
     text-align: center;
-    font-size: 16px;
-    color: rgb(46, 46, 46);
+    font-size: 25px;
+    /* font-size: 16px; */
+    /* color: rgb(46, 46, 46); */
     font-family: var(--fontFamily1);
     margin-bottom: 0.5rem;
+    background-color: #00AEFF;
+    box-shadow: 0px 0px 11px 0px #00000040;
+    padding: 0.5rem;
+    border-radius: 6px;
+    color: #FFFF;
+    width: calc(100% - 6rem);
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .detailEditSection {
